--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,6 @@
                   $("<h2>").appendTo($doject).append('test');
                 }
             });
-
             //$("#grid_box").html(bears);
           },'json');
       });
@@ -55,12 +54,17 @@
   <header>
     
     <div class="container">
-      <div class="branding clearfix">
+      <div class="logo-title">
+        Share Happy !
+        <!--
         <div class="logo">
           <a href="http://www.callmenick.com">
             <img src="/img/core/logo.svg" onerror="this.src=logo.png" alt="Call Me Nick - Tutorials, Resources, &amp; Articles for Web Design &amp; Web Development">
           </a>
-        </div><!-- /.logo -->
+        </div>
+        -->
+        <!-- /.logo -->
+        <!---
         <div class="social">
           <nav>
             <a class="fb" href="https://www.facebook.com/callmenick1" target="_blank">facebook</a>
@@ -69,7 +73,9 @@
             <a class="rss" href="http://feeds.feedburner.com/callmenick_" target="_blank">rss</a>
             <a class="email" href="http://www.callmenick.com/subscribe/">email</a>
           </nav>
-        </div><!-- /.social -->
+        </div>
+        -->
+        <!-- /.social -->
       </div><!-- /.branding -->
     </div><!-- /.container -->
 
