--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,7 @@
   <script src="/js/jquery-2.1.1.min.js"></script>
   <script type="text/javascript">
       $(document).ready(function(){
+          var imageFiles = [];
           var tag = "<div class=\"container content\"><h2>Hello World</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, neque, enim, voluptates, impedit tenetur quaerat dolorem ex sit quas velit sapiente nostrum tempora fugit iure optio. Laborum, tempora at incidunt! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, sequi dolor esse repudiandae autem iste dolores amet doloribus error officiis saepe expedita sapiente id perferendis eos recusandae velit nesciunt? Iure!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, esse, velit, eaque laborum atque iusto facilis labore mollitia veniam officia alias delectus itaque ab nesciunt id exercitationem nam! Consequuntur, ex.</p></div>";
           //$("#grid_box").html(tag);
           $.get('/api/share/items',function(data) {
@@ -84,6 +85,7 @@
             }
           });*/
           $('#Done').click(function(){
+            $.post('/api/share/items',{'name':'tilltue2','desc':'desc test akakakd','price':'300 won'});
             $('.cd-popup').removeClass('is-visible');
             return false; 
           });
@@ -93,10 +95,17 @@
           });
 
           $('#uploadBtn').change(function(){
-            console.log($('#uploadBtn').val());
+            if(imageFiles.length > 2)
+              return false;
+            //console.log($('#uploadBtn').val());
             $('.uploadFile').val($('#uploadBtn').val());
-            //console.log($('#textbox').val());
-            $('.textbox').css("height","-=200em");
+            //$('.textbox').css("height","10em");
+            var reader = new FileReader();
+            reader.onload = function (e) {
+              $("<img>").attr({'src':e.target.result,"width":"35","height":"35","align":"left","class":"testImage","style":"margin:10px"}).appendTo($('.imagePreview'));
+            }
+            reader.readAsDataURL(this.files[0]);
+            imageFiles.push(this.files[0]);
           });
       });
   </script>
@@ -225,7 +234,15 @@
         </td>
       </tr>
     </table>
-    <textarea id="testtext" class="textbox" type="text"></textarea>
+    <textarea class="textbox" type="text"></textarea>
+     <table width="100%" height="40px">
+      <tr>
+        <td width="100%">
+          <div class="imagePreview" style="padding:0px 0px 0px 2.5em;">
+          </div>
+        </td>
+      <tr>
+    </table>
     <table width="95%" height="70px">
       <tr>
         <td width="85%">
